--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "express-rate-limit": "^6.6.0",
     "mongoose": "^6.7.1"
   },
   "devDependencies": {
