generate jwt access token

--- a/.env-cmdrc.json
+++ b/.env-cmdrc.json
@@ -4,13 +4,17 @@
     "DB_USER": "JWT-Express",
     "DB_PASS": "dE4sM2sWQscC5Zai",
     "DB_NAME": "JWT-Express",
-    "DB_HOST": "cluster0.nlpea.mongodb.net"
+    "DB_HOST": "cluster0.nlpea.mongodb.net",
+    "SECRET_ACCESS_KEY": "asdsdasdadasdadwrwer",
+    "ACCESS_TOKE_EXPIRY": "15m"
   },
   "prod": {
     "PORT": "8001",
     "DB_USER": "JWT-Express",
     "DB_PASS": "dE4sM2sWQscC5Zai",
     "DB_NAME": "JWT-Express",
-    "DB_HOST": "cluster0.nlpea.mongodb.net"
+    "DB_HOST": "cluster0.nlpea.mongodb.net",
+    "SECRET_ACCESS_KEY": "asdsdasdadasdadwrwer",
+    "ACCESS_TOKE_EXPIRY": "15m"
   }
 }
