--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-rate-limit": "^6.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.1"
   },
   "devDependencies": {
