get refresh token

--- a/.env-cmdrc.json
+++ b/.env-cmdrc.json
@@ -6,7 +6,9 @@
     "DB_NAME": "JWT-Express",
     "DB_HOST": "cluster0.nlpea.mongodb.net",
     "SECRET_ACCESS_KEY": "asdsdasdadasdadwrwer",
-    "ACCESS_TOKE_EXPIRY": "15m"
+    "ACCESS_TOKEN_EXPIRY": "15m",
+    "SECRET_REFRESH_KEY": "6dfsgs9dsgsdgtjj879fgd",
+    "ACCESS_REFRESH_EXPIRY": "7d"
   },
   "prod": {
     "PORT": "8001",
@@ -15,6 +17,8 @@
     "DB_NAME": "JWT-Express",
     "DB_HOST": "cluster0.nlpea.mongodb.net",
     "SECRET_ACCESS_KEY": "asdsdasdadasdadwrwer",
-    "ACCESS_TOKE_EXPIRY": "15m"
+    "ACCESS_TOKEN_EXPIRY": "15m",
+    "SECRET_REFRESH_KEY": "6dfsgs9dsgsdgtjj879fgd",
+    "ACCESS_REFRESH_EXPIRY": "7d"
   }
 }
